--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "axios": "^0.19.2",
     "bootstrap": "^4.5.2",
     "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "vue": "^2.5.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
+    "axios": "^0.19.2",
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.1",
